removed calls to commons-io IOUtils